fix: issues with menu styling on mobile

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -238,15 +238,18 @@ button:focus {
   top: 60.2px;
   width: 100%;
   z-index: 9;
+  @media screen and (max-width: 330px) {
+    top: 56.2px;
+  }
 }
 
 #menu {
   background-color: var(--sn-stylekit-background-color);
+  border: 1px solid var(--sn-stylekit-border-color);
+  border-right-width: 0px;
   display: flex;
   flex-direction: column;
   height: calc(100% - 62px);
-  border: 1px solid var(--sn-stylekit-border-color);
-  border-right-width: 0px;
   margin-right: 0px;
   margin-top: 0px;
   max-width: 60%;
@@ -254,9 +257,18 @@ button:focus {
   overflow-y: auto;
   position: fixed;
   right: 0px;
+  width: 100%;
   z-index: 10;
-  @media screen and (min-width: 700px) {
-    min-width: 450px;
+
+  @media screen and (max-width: 330px) {
+    max-width: 100%;
+    min-width: 300px;
+    height: calc(100vh - 56.2px);
+  }
+
+  @media screen and (min-width: 750px) {
+    max-width: 450px;
+    width: 450px;
   }
 
   .notification {
